--- a/training/Dockerfile
+++ b/training/Dockerfile
@@ -85,7 +85,7 @@ RUN pip install transformers==4.25.1 datasets==2.8.0 pytorch-lightning==1.8.6 tr
 RUN pip install git+https://github.com/mlcommons/logging.git@2.1.0
 
 # Install FlashAttention
-RUN pip install flash-attn==1.0.9
+# RUN pip install flash-attn==1.0.9
 
 # Install CUDA extensions for cross-entropy, fused dense, layer norm
 RUN git clone https://github.com/HazyResearch/flash-attention \
@@ -97,3 +97,9 @@ RUN git clone https://github.com/HazyResearch/flash-attention \
     && cd csrc/fused_dense_lib && pip install . && cd ../../ \
     && cd csrc/ft_attention && pip install . && cd ../../ \
     && cd .. && rm -rf flash-attention
+
+RUN export PYTHONPATH=$PWD:$PYTHONPATH \
+    && pytest -q -s tests/datamodules/test_language_modeling_hf.py -k "openwebtext"
+
+RUN pip install transformers --upgrade \
+    && pip install sentencepiece
